<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.thfw.mobileheart.activity.settings.SettingActivity">

    <com.thfw.ui.widget.TitleView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:tv_centerText="@string/me_setting"
        tools:ignore="MissingConstraints" />


    <LinearLayout
        android:id="@+id/ll_account_safe"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_account_safe"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/ll_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_info"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />


    <LinearLayout
        android:id="@+id/ll_clear_cache"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_clear_cache"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />

        <TextView
            android:id="@+id/tv_cache"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/text_content"
            android:textSize="@dimen/textSize"
            tools:text="0M" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/ll_privacy_policy"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_privacy_policy"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/ll_version"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_version_msg"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />


        <TextView
            android:id="@+id/tv_version"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:textColor="@color/text_content"
            android:textSize="@dimen/textSize"
            tools:text="1.0.0" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />

    <LinearLayout
        android:id="@+id/ll_about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:paddingLeft="12dp"
        android:paddingTop="16dp"
        android:paddingRight="12dp"
        android:paddingBottom="16dp">


        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/set_about_ai"
            android:textColor="@color/text_common"
            android:textSize="@dimen/textSize" />


        <ImageView
            android:layout_width="20dp"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_arrow_right" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_2px"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@color/divider" />


    <Button
        android:id="@+id/bt_logout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/button_height"
        android:layout_marginLeft="26dp"
        android:layout_marginTop="36dp"
        android:layout_marginRight="26dp"
        android:background="@drawable/common_red_btn_selector"
        android:text="@string/logout"
        android:textColor="@color/white"
        android:textSize="@dimen/textSize" />


</LinearLayout>